@@ -102,6 +102,10 @@ abstract class BaseSQLTab extends BaseObjectTab
 
 	public Component getComponent()
 	{
+        if (_comp == null)
+        {
+            _comp = new DataSetScrollingPanel();
+        }        
 		return _comp;
 	}
 
@@ -123,12 +127,10 @@ abstract class BaseSQLTab extends BaseObjectTab
 				{
 					final SessionProperties props = session.getProperties();
 					final String destClassName = props.getMetaDataOutputClassName();
-                    IDataSet ds = createDataSetFromResultSet(rs);
-					_comp = new DataSetScrollingPanel(destClassName, null);
-                    _comp.getViewer().show(ds);
-				}
-					finally
-				{
+                    _comp.load(createDataSetFromResultSet(rs), destClassName);				
+                } 
+                finally 
+                {
 					rs.close();
 				}
 			}
